# Mettaton

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.py  mettaton.py  nekobj.py  nekolib.py  requirements.txt  test.req  victims
include/mettaton/: libneko.h  mettaton.h
old/: Dockerfile
src/bot/: CMakeLists.txt  mettaton.cpp
src/libneko/: CMakeLists.txt  nekoreq.cpp  nekoreq.hh  nekoreq.hpp  nekoreq.hxx
test/: CMakeLists.txt  test.cpp  test.req
